--- a/Logica-de-Programacao1/Adivinha_mais2.html
+++ b/Logica-de-Programacao1/Adivinha_mais2.html
@@ -24,7 +24,9 @@
             }
         }
 
-        alert("Você errou!");
+        if (achou == false) {
+            alert("Você ERROU!");
+        }
 
         input.value = "";
         input.focus();
