--- a/Logica-de-Programacao1/Adivinha_mais2.html
+++ b/Logica-de-Programacao1/Adivinha_mais2.html
@@ -4,8 +4,48 @@
 <button>Compare com o meu segredo</button>
 
 <script>
+    function sorteia() {
 
-    var segredos = [5, 7, 10, 2, 3];
+        return Math.round(Math.random() * 10);
+
+    }
+
+    function sorteiaNumeros(quantidade) {
+
+        var segredos = [];
+
+        var numero = 1;
+
+        while (numero <= quantidade) {
+
+            var numeroAleatorio = sorteia();
+            var achou = false;
+
+            if (numeroAleatorio !== 0) {
+                for (var posicao = 0; posicao < segredos.length; posicao++) {
+
+                    if (segredos[posicao] == numeroAleatorio) {
+                        achou = true;
+                        break;
+                    }
+
+                }
+
+                if (achou == false) {
+                    segredos.push(numeroAleatorio);
+                    numero++;
+                }
+            }
+
+        }
+
+        return segredos;
+
+    }
+
+    var segredos = sorteiaNumeros(3);
+
+    console.log(segredos);
 
     var input = document.querySelector("input");
     input.focus();
@@ -25,6 +65,7 @@
         }
 
         if (achou == false) {
+
             alert("Você ERROU!");
         }
 
