--- a/Logica-de-Programacao2/esquadro.html
+++ b/Logica-de-Programacao2/esquadro.html
@@ -6,16 +6,20 @@
     var tela = document.querySelector('canvas');
     var pincel = tela.getContext('2d');
 
+    //Triangulo maior
+    pincel.fillStyle = "purple";
     pincel.beginPath();
     pincel.moveTo(50, 50);
     pincel.lineTo(50, 400);
     pincel.lineTo(400,400);
     pincel.fill();
 
+    //Triangulo menor
     pincel.fillStyle = "white";
     pincel.beginPath();
     pincel.moveTo(100,175);
     pincel.lineTo(100,350);
     pincel.lineTo(275,350);
     pincel.fill();
+
 </script>
