--- a/Html-CSS/produtos.html
+++ b/Html-CSS/produtos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Barbearia Alura - Produtos</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -45,6 +45,12 @@
             </li>
         </ul>  
     </main>
+
+    <footer>
+        <img src="imagens/logo-branco.png">
+        <p class = "copyright">	
+            &copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
 </body>
 
 </html>
