--- a/Site-Barbearia-Alura/index.html
+++ b/Site-Barbearia-Alura/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="style-home.css">
 </head>
@@ -14,7 +12,7 @@
         <h1 class="titulo-principal">Barbearia Alura</h1>
     </header>
 
-    <img id="banner" src="banner.jpg">
+    <img id="banner" src="imagens/banner.jpg">
 
     <div class="principal">
         <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -42,7 +40,7 @@
             <li class="itens">Profissionais Qualificados</li>
         </ul>
 
-        <img src="beneficios.jpg" class="imagemBeneficios">
+        <img src="imagens/beneficios.jpg" class="imagemBeneficios">
     </div>
 
 </body>
