--- a/Site-Barbearia-Alura/contato.html
+++ b/Site-Barbearia-Alura/contato.html
@@ -29,7 +29,7 @@
             <input type="text" id="nome" class="input-padrao" required>
 
             <label for="email">Email</label>
-            <input id="email" type="email" class="input-padrao" required placeholder="seuemail@dominio.com" >
+            <input id="email" type="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
             <label for="telefone">Telefone</label>
             <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
@@ -39,11 +39,14 @@
 
             <fieldset>
                 <legend>Como prefere o nosso contato?</legend>
-                <label for="radio-email"><input type="radio" value="Email" id="radio-email" name="contato"> Email</label>
+                <label for="radio-email"><input type="radio" value="Email" id="radio-email" name="contato">
+                    Email</label>
 
-                <label for="radio-telefone"><input type="radio" value="telefone" id="radio-telefone" name="contato">Ligação</label>
+                <label for="radio-telefone"><input type="radio" value="telefone" id="radio-telefone"
+                        name="contato">Ligação</label>
 
-                <label for="radio-whatsapp"><input type="radio" value="whatsapp" id="radio-whatsapp" name="contato" checked>Whatsapp</label>
+                <label for="radio-whatsapp"><input type="radio" value="whatsapp" id="radio-whatsapp" name="contato"
+                        checked>Whatsapp</label>
             </fieldset>
 
             <fieldset>
@@ -55,12 +58,37 @@
                 </select>
             </fieldset>
 
-            <label class="checkbox" ><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
+            <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por
+                email?</label>
 
-            <input type="submit" value="Enviar formulário">
-            
-            
+            <input type="submit" value="Enviar formulário" class="enviar">
+
+
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+            </tbody>
+        </table>
+
     </main>
 
     <footer>
